<resources>
    <string name="app_name">TickVision</string>
    <string name="tick_vision">تیکـ... ویژن</string>
    <string name="checkConnection">لطفا اتصال اینترنت خود را چک نمائید</string>
    <string name="tryAgain">تلاش مجدد</string>
    <string name="mahcheGroup">گـــروه ماهچـــه</string>
    <string name="mailText">ایمیل</string>
    <string name="registry">ثبت نام</string>
    <string name="iHaveAccount">حساب کاربری دارم (ورود)</string>
    <string name="completeFields">لطفا تمام فیلدها را تکمیل نمائید</string>
    <string name="unMatchRepeatPass">کلمه عبور با تکرار آن همخوانی ندارد</string>
    <string name="duplicate">ایمیل یا نام کاربری قبلا در سیستم ثبت شده است</string>
    <string name="fault">خطا در برقراری ارتباط</string>
    <string name="usernameText">نام کاربری</string>
    <string name="passwordText">کلمه عبور</string>
    <string name="RepeatPasswordText">تکرار کلمه عبور</string>
    <string name="userMailText">ایمیل یا نام کاربری</string>
    <string name="rememberText">مرا به خاطر بسپار</string>
    <string name="forgetPassword">رمز خود را فراموش کرده ام</string>
    <string name="loginText">ورود به برنامه</string>
    <string name="createAccount">ایجاد حساب کاربری جدید</string>
    <string name="wrongUser">نام کاربری(ایمیل) یا کلمه عبور اشتباه است</string>
    <string name="pleaseWait">در حال برقراری ارتباط با سرور</string>
    <string name="dailyPerformance">عملکرد روزانه</string>
    <string name="dailyWorkingHours">ساعت کاکرد روزانه :</string>
    <string name="notifText">برنامه تیک ویژن در حال اجراست</string>
    <string name="addVision">افزودن هدف جدید</string>
    <string name="selectVision">انتخاب هدف جهت بررسی روزانه</string>
    <string name="listVision">لیست تمام اهداف مشخص شده</string>
    <string name="titleVision">عنوان هدف</string>
    <string name="moneyVision">مبلغ هدف</string>
    <string name="dayVision">تعداد روز</string>
    <string name="save_vision">ثبت هدف</string>
    <string name="cancelText">بازگشت</string>
    <string name="next">ادامه</string>
    <string name="titleVisionError">لطفا فیلد مربوط به عنوان هدف را تکمیل نمائید</string>
    <string name="moneyVisionError">لطفا فیلد مربوط به مبلغ هدف را تکمیل نمائید</string>
    <string name="dayVisionError">لطفا فیلد مربوط به تعداد روز را تکمیل نمائید</string>
    <string name="duplicateVision">هدفی با این عنوان یکبار در سیستم ثبت شده است</string>
    <string name="createVisionTableSuccess">اطلاعات شما با موفقیت ذخیره شد</string>
    <string name="createVisionTableFialed">ذخیره اطلاعات با مشکل مواجه شد</string>
    <string name="selectVisionDialogText">یک هدف جهت بررسی روزانه انتخاب نمائید</string>
    <string name="select">انتخاب</string>
    <string name="selectVisionText">لطفا یکی از اهداف خود را انتخاب نمائید</string>
    <string name="paymentText">هزینه</string>
    <string name="receiveText">درآمد</string>
    <string name="receive">مبلغ دریافتی</string>
    <string name="savePrice">ثبت مبلغ</string>
    <string name="profitText">سود</string>
    <string name="leftoverText">باقیمانده</string>
    <string name="saveReceive">ثبت درآمد</string>
    <string name="savePayment">ثبت هزینه</string>
    <string name="receiveError">لطفا فیلد مربوط به مبلغ دریافتی را تکمیل نمائید</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="receive_text">ثبت مبلغ دریافتی</string>
    <string name="payment_text">ثبت مبلغ پرداختی</string>
    <string name="moneyError">لطفا فیلد مربوط به مبلغ را تکمیل نمائید</string>
    <string name="exitAccount">خروج از حساب کاربری</string>
    <string name="exit">خروج از برنامه</string>
    <string name="reset">صفر کردن مقادیر</string>
    <string name="export">گرفتن خروجی از مقادیر هدف</string>
    <string name="setting">تنظیمات برنامه</string>
    <string name="aboutUs">درباره ما</string>
    <string name="contact">تماس با ما</string>
    <string name="email">ارسال ایمیل</string>
    <string name="whatsapp">ارسال پیامک در واتساپ</string>
    <string name="call">تماس تلفنی</string>
    <string name="another">سایر</string>
    <string name="idea">بیان نظرات</string>
    <string name="myApp">سایر برنامه های ما</string>
    <string name="exitTitle">خروج</string>
</resources>