<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/background"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/iran_sans"
            android:text="@string/addVision"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/titleTextSize"
            tools:ignore="TextContrastCheck" />

        <View
            android:layout_width="250dp"
            android:layout_height="1.5dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@color/primaryColor" />

        <EditText
            android:id="@+id/edt_title_vision"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/edt_background_red"
            android:fontFamily="@font/iran_sans"
            android:gravity="center"
            android:hint="@string/titleVision"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/primaryColor"
            android:textColorHint="@color/disable"
            android:textCursorDrawable="@drawable/dark_cursor"
            android:textSize="@dimen/normalTextSize"
            tools:ignore="Autofill,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edt_money_vision"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/edt_background_red"
            android:fontFamily="@font/iran_sans"
            android:gravity="center"
            android:hint="@string/moneyVision"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/primaryColor"
            android:textColorHint="@color/disable"
            android:textCursorDrawable="@drawable/dark_cursor"
            android:textSize="@dimen/normalTextSize"
            android:visibility="gone"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/edt_day_vision"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/edt_background_red"
            android:fontFamily="@font/iran_sans"
            android:gravity="center"
            android:hint="@string/dayVision"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/primaryColor"
            android:textColorHint="@color/disable"
            android:textCursorDrawable="@drawable/dark_cursor"
            android:textSize="@dimen/normalTextSize"
            android:visibility="gone"
            tools:ignore="Autofill" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/btn_save_add_vision_dialog"
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/iran_sans_bold"
                android:text="@string/next"
                android:textColor="@color/primaryUltraLightColor"
                android:textSize="@dimen/normalTextSize"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <Button
                android:id="@+id/btn_cancel_add_vision_dialog"
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/iran_sans_bold"
                android:text="@string/cancelText"
                android:textColor="@color/primaryUltraLightColor"
                android:textSize="@dimen/normalTextSize"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>