<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="370dp"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl">

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="330dp"
        android:orientation="vertical"
        android:background="@drawable/background"
        tools:ignore="UselessParent">

        <View
            android:layout_width="300dp"
            android:layout_height="1.5dp"
            android:background="@color/primaryColor"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_selected_vision_vision_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/selectVisionDialogText"
            android:textColor="@color/primaryColor"
            android:layout_gravity="center"
            android:textSize="@dimen/normalTextSize"
            android:fontFamily="@font/iran_sans_bold"/>

        <View
            android:layout_width="300dp"
            android:layout_height="1.5dp"
            android:background="@color/primaryColor"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"/>

        <View
            android:layout_width="300dp"
            android:layout_height="3dp"
            android:background="@color/primaryColor"
            android:layout_gravity="center"
            android:layout_marginTop="1.5dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_select_vision_dialog"
            android:layout_width="300dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:background="@drawable/table_item_background"
            android:overScrollMode="never"
            android:scrollbarThumbVertical="@android:color/transparent"/>

        <View
            android:layout_width="300dp"
            android:layout_height="3dp"
            android:background="@color/primaryColor"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

        <View
            android:layout_width="300dp"
            android:layout_height="1.5dp"
            android:background="@color/primaryDarkColor"
            android:layout_gravity="center"
            android:layout_marginTop="1.5dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_ok_select_vision_dialog"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:background="@drawable/btn_background_primary"
                android:fontFamily="@font/iran_sans_bold"
                android:text="@string/select"
                android:textColor="@color/primaryUltraLightColor"
                android:textSize="@dimen/normalTextSize"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btn_cancel_select_vision_dialog"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30dp"
                android:background="@drawable/btn_background_primary"
                android:fontFamily="@font/iran_sans_bold"
                android:text="@string/cancelText"
                android:textColor="@color/primaryUltraLightColor"
                android:textSize="@dimen/normalTextSize"
                tools:ignore="TouchTargetSizeCheck" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>